# fastapi-blogs-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.docker.env.txt  example.env.txt  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 024110bfd5ec_create_articles_table.py
app/: deps.py  main.py
app/api/: main.py
app/api/routes/: articles.py
app/core/: config.py  db.py
app/db/: base.py  session.py
app/db/models/: article.py
app/middleware/: logging.py
app/models/: article.py
app/schemas/: article.py
app/services/: article_service.py
app/tests/: conftest.py  test_articles.py  utils.py
